name:                hspec-blink1
version:             0.1.0.0
synopsis:            Hspec integration with blink(1) hardware
description:         Provides visual feedback on test runs, using blink(1) hardware
homepage:            https://github.com/bobjflong/hspec-blink1
license:             BSD3
license-file:        LICENSE
author:              Bob Long
maintainer:          robertjflong@gmail.com
copyright:           2016 Bob Long
category:            Web
build-type:          Testing
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Test.Hspec.Blink1
  build-depends:       base >= 4.7 && < 5
                       , text
                       , shelly
                       , hspec-core
                       , hspec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bobjflong/hspec-blink1
